# ChessEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/chess/: board.h  defs.h  logging.h  matrix.h  message.h  move.h  search.h  tree.h  util.h
src/: board.c  board.h  defs.h  evaluate.c  evaluate.h  logging.c  main.c  matrix.c  message.c  move.c  move.h  piece.c  piece.h  search.c  search.h  tree.c  util.c  util.h
test/: engine.c
